--- a/WhatsOnZwift/fr.lproj/Main.strings
+++ b/WhatsOnZwift/fr.lproj/Main.strings
@@ -13,3 +13,5 @@
 
 /* Class = "UILabel"; text = "Second View"; ObjectID = "zEq-FU-wV5"; */
 "zEq-FU-wV5.text" = "Second View";
+
+"lZI-pM-bvS.text" = "Fourni par https://whatsonzwift.com"
